--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+title: Pokemon Hokkai-Go
+subtitle: by Nitobe College Group 3
+email: jeremiaoc@elms.hokudai.ac.jp
+description: Explore and Enjoy Hokkaido with Pokemon!
+baseurl: "/pokehokkaigo" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+street_address: Hokkaido University
+city: Sapporo
+state: Hokkaido
+zip_code:
+country: Japan
+phone:
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-count: 8
 
 # social settings (key must match name of font awesome icon)
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
@@ -41,4 +41,4 @@ exclude:
 - "*.gemspec"
 - LICENSE.md
 - CONTRIBUTING.md
-- README.md 
+- README.md
