--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Pokemon Hokkai-Go
 subtitle: by Nitobe College Group 3
 email: jeremiaoc@elms.hokudai.ac.jp
 description: Explore and Enjoy Hokkaido with Pokemon!
-baseurl: "/pokehokkaigo" # the subpath of your site, e.g. /blog
+baseurl: "/pokehokkaigo.github.io" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: Hokkaido University
