--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: jeremiaoc@elms.hokudai.ac.jp
 description: Explore and Enjoy Hokkaido with Pokemon!
 baseurl: "/pokehokkaigo" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
-author: Nitobe College Group 3
+author:
 street_address: Hokkaido University
 city: Sapporo
 state: Hokkaido
