--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: # the base hostname & protocol for your site
 author:
 street_address: Hokkaido University
 city: Sapporo
-state: Hokkaid
+state: Hokkaido
 zip_code:
 country: Japan
 phone:
